# python-project-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt
docs/: index.md  reference.md
graphical_models/: __init__.py  graphs.py
tests/: test_graphs.py
